--- a/Posicionamento/index.html
+++ b/Posicionamento/index.html
@@ -8,49 +8,59 @@
   <title>Bikcraft</title>
 </head>
 <body>
-  <img src="./img/bikcraft.svg" alt="Bikcraft">
+  
+  <header class="header">
+    <img src="./img/bikcraft.svg" alt="Bikcraft">
 
-  <div class="nav">
-    <a href="/">Sobre</a>
-    <a href="/">Produtos</a>
-    <a href="/">Lojas</a>
-    <a href="/">Contato</a>
-  </div>
+    <nav aria-label="primaria">
+      <ul class="menu">
+        <li>
+          <a href="/">Sobre</a>
+          <a href="/">Produtos</a>
+          <a href="/">Lojas</a>
+          <a href="/">Contato</a>
+        </li>
+      </ul> 
+    </nav>
+  </header>
 
-  <div class="conteudo">
-    <div class="intro">
-      <span class="detalhe"></span>
-      <h1>Bicicletas feitas com o melhor, para o melhor.</h1>
-      <p>A Nimbus Stark foi desenvolvida especialmente para os atletas e entusiastas no ramo do ciclismo, ela conta com os melhores acessorios disponiveis no mercado.</p>
-      <a class="botao" href="/">Ver mais</a>
-    </div>
-  <img src="./img/bicicleta.jpg" alt="Bicicleta Preta">
+  <main>
+    <article class="conteudo">
+      <div class="intro" aria-labelledby="label-intro">
+        <!-- <span class="detalhe"></span> -->
+        <h1 id="label-intro">Bicicletas feitas com o melhor, para o melhor.</h1>
+        <p>A Nimbus Stark foi desenvolvida especialmente para os atletas e entusiastas no ramo do ciclismo, ela conta com os melhores acessorios disponiveis no mercado.</p>
+        <a class="botao" href="/">Ver mais</a>
+      </div>
+      <img src="./img/bicicleta.jpg" alt="Bicicleta Preta">
+    </article>
 
-  <h2 class="subtitulo">Vantagens Bikcraft</h2>
+    <article class="conteudo" aria-labelledby="label-vantagens">
+      <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
 
-  <div class="vantagens">
-    <div class="vantagens-item">
-      <img src="./img/eletrica.svg" alt="">
-      <h3>Motor Eletrico</h3>
-      <p>Permite voce viajar distancias inimaginaveis com a sua bike.</p>
-    </div>
-    <div class="vantagens-item">
-      <img src="./img/velocidade.svg" alt="">
-      <h3>40 km/h</h3>
-      <p>A mais rapida bicicleta eletrica disponivel hoje no mercado.</p>
-    </div>
-    <div class="vantagens-item">
-      <img src="./img/rastreador.svg" alt="">
-      <h3>Rastreador</h3>
-      <p>Rastreador e sistema anti-furto para garantir o seu conforto.</p>
-    </div>
-  </div>
+      <ul class="vantagens">
+        <li class="vantagens-item">
+          <img src="./img/eletrica.svg" alt="">
+          <h3>Motor Eletrico</h3>
+          <p>Permite voce viajar distancias inimaginaveis com a sua bike.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/velocidade.svg" alt="">
+          <h3>40 km/h</h3>
+          <p>A mais rapida bicicleta eletrica disponivel hoje no mercado.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/rastreador.svg" alt="">
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu conforto.</p>
+        </li>
+      </ul>
+    </article>
+  </main>
 
-  </div>
-
-  <div class="rodape">
+  <footer class="rodape">
     <p>Bikcraft. O nosso melhor, para o melhor.</p>
-  </div>
+  </footer>
 
 </body>
 </html>
