feat css responsive and adjusts

--- a/Posicionamento/index.html
+++ b/Posicionamento/index.html
@@ -32,10 +32,14 @@
         <p>A Nimbus Stark foi desenvolvida especialmente para os atletas e entusiastas no ramo do ciclismo, ela conta com os melhores acessorios disponiveis no mercado.</p>
         <a class="botao" href="/">Ver mais</a>
       </div>
-      <img src="./img/bicicleta.jpg" alt="Bicicleta Preta">
+
+      <div class="intro-cover">
+        <img src="./img/bicicleta.jpg" alt="Bicicleta Preta">
+      </div>
+
     </article>
 
-    <article class="conteudo" aria-labelledby="label-vantagens">
+    <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
       <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
 
       <ul class="vantagens">
