--- a/Vue.js/1_install_vue/index.html
+++ b/Vue.js/1_install_vue/index.html
@@ -14,7 +14,7 @@
       <form id="app-form">
         <input type="text" v-model="input_name" placeholder="Digite seu nome">
         <input type="submit" value="Enviar" v-on:click="submitForm">
-      </form>
+      </form>http://127.0.0.1:5500/Vue.js/1_install_vue/index.html
 
       <p> O meu nome e: {{ name }} e tenho {{ age }} anos, atualmente trabalho como {{ job }} </p>
 
